# fluffychat

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  PRIVACYPOLICY.md  README.md  clickable.json  fluffychat.apparmor  fluffychat.content-hub  fluffychat.desktop.in  fluffychat.kdev4  fluffychat.url-dispatcher  fluffychat_snap.desktop  helloHelper  manifest.json.in  push.in  push.out
.kdev4/: fluffychat.kdev4
docs/: CNAME  README.md  _config.yml  commands.md  content.odt  faq.html  fluffychatsqlite.dia  index.html  sitemap.xml
docs/_includes/: footer.html  index.html  navigation.html
docs/css/: custom.css
docs/de/: faq.html  faq.md  index.html  sitemap.xml
docs/en/: faq.html  faq.md  index.html  sitemap.xml
docs/es/: faq.html  faq.md  index.html  sitemap.xml
docs/nl/: faq.html  faq.md  index.html  robots.txt  sitemap.xml
olm/: CMakeLists.txt
olm/qolmplugin/: CMakeLists.txt  olmtest.cpp  olmtest.h  plugin.cpp  plugin.h  qmldir  qolmplugin.cpp  qolmplugin.h
plugins/: CMakeLists.txt
plugins/E2ee/: CMakeLists.txt  e2ee.cpp  e2ee.h  e2eeSeed.cpp  e2eeSeed.h  plugin.cpp  plugin.h  qmldir
plugins/Qolm/: CMakeLists.txt  plugin.cpp  plugin.h  qmldir  qolm.cpp  qolm.h
plugins/Upload/: CMakeLists.txt  plugin.cpp  plugin.h  qmldir  upload.cpp  upload.h
po/: ar.po  ca.po  cs.po  de.mo  de.po  es.mo  es.po  eu.po  fluffychat.christianpauly.pot  fr.po  hu.po  id.po  it.po  ja.po  nb_NO.po  nl.po  pl.po  pt.po  ru.po  zh_Hans.po  zh_Hant.po
push/: CMakeLists.txt  config.h  i18n.h  push.cpp  pushhelper.cpp
qml/: Main.qml
qml/components/: AddAliasDialog.qml  AddContactDialog.qml  AddEmailDialog.qml  AddPhoneDialog.qml  AddressesListItem.qml  ArchivedChatListItem.qml  Avatar.qml  BottomEdgePageStack.qml  ChangeAvatarDialog.qml  ChangeChatAvatar.html  ChangeChatAvatarDialog.qml  ChangeChatnameDialog.qml  ChangeDisplaynameDialog.qml  ChangeGuestAccessDialog.qml  ChangeHistoryVisibilityDialog.qml  ChangeJoinRulesDialog.qml  ChangeMemberStatusDialog.qml  ChangePasswordDialog.qml  ChangePowerLevelDialog.qml  ChangeUserAvatar.html  ChatEvent.qml  ChatListItem.qml  ChatScrollView.qml  ColorDialog.qml  ColorListItem.qml  CommunityViewer.qml  ConfirmDialog.qml  ConsentViewer.qml  ContactGridItem.qml  ContactImport.qml  ContactListItem.qml  CountryPicker.qml  CustomConnectivity.qml  DefaultLayout.qml  DeviceKeyDialog.qml  DeviceKeyListItem.qml  DeviceListItem.qml  DisableAccountDialog.qml  DownloadDialog.qml  EmailListItem.qml  (+47 more)
qml/controller/: DisplayEventController.qml  EventController.qml  MatrixController.qml  MediaController.qml  PushController.qml  PushControllerMock.qml  RoomNameController.qml  SenderController.qml  SettingsController.qml  ShareController.qml  StampController.qml  StorageController.qml  UriController.qml  UserMetricsController.qml  UserNameController.qml
snap/: snapcraft.yaml
(+96 files in other folders)
